perf(csharp): use static typed dispatch for typed serialization